# orchestrator

./: .gitignore  2026-01-07-CODE-REVIEW.md  2026-01-07-COMMIT-GUIDE.md  2026-01-07-FINAL-STATUS.md  2026-01-07-NEXT-STEPS.md  FINALIZATION-COMPLETE.md  README.md  discovery_comparison_results.json  last-run-errors.txt  pyproject.toml  test_alana_connection.py  test_discovery_results.json
.orchestrator/: README.md
config/: semantic_filter.yaml
docs/: BUILD-ENHANCEMENT-FINAL-SUMMARY.md  CLOUD-VS-LOCAL-LLM.md  COMPLETE-JOURNEY-SUMMARY.md  DISCOVERY-PORTFOLIO-FINALISATION-2026-01-07.md  FINAL-STATUS-REPORT.md  FINALIZATION-SUMMARY.md  LLM-SELECTION-GUIDE.md  OPENAI-MARKDOWN-WRAPPING-FIX.md  OPENAI-SETUP-GUIDE.md  OPTIMIZATION-PRIORITIES.md  QUICK-REFERENCE-DISCOVERY-PORTFOLIO.md  SPECTRA-GRADE-TOKEN-EFFICIENCY.md  TOKEN-OPTIMIZATION-SUMMARY.md  TONIGHT-SESSION-SUMMARY.md  activities.md  architecture.md  build-activity-enhancement-complete.md  build-activity-enhancement-plan.md  discovery-gap-analysis.md  discovery-improvements-summary.md  discovery-portfolio-structure.md  discovery-specification.md  history.md  implementation-complete-semantic-filtering.md  industry-research-prompt-optimization.md  llm-optimization-tokens.md  orchestrator-review-2026-01-08.md  playbook-context-architecture.md  playbooks.md  prompt-optimization-analysis.md  refactor-state-storage.md  semantic-filtering-architecture.md
scripts/: build_playbook_registry.py  compare_discovery_systems.py  configure-openai.ps1  test_discover_existing_services.py  test_single_discovery.py
tests/: __init__.py  (+8 more)
(+40 files in other folders)
